--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         video {
             border: 2px solid #333;
             border-radius: 8px;
+            transform: scaleX(-1); /* Inverte a imagem horizontalmente */
         }
     </style>
 </head>
