--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <video id="video" width="640" height="480" autoplay></video>
     <canvas id="canvas" style="display: none;"></canvas>
     <div id="resultado"></div>
+    <ul id="listaQRCodes"></ul>
     <script src="https://cdn.jsdelivr.net/npm/jsqr@2.0.1/build/jsQR.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
