--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leitor de QR Code com Inversão de Câmera</title>
+  <title>Leitor de QR Code com Detecção de Proximidade</title>
   <style>
     #video-container {
       display: flex;
@@ -20,84 +20,86 @@
   </style>
 </head>
 <body>
-  <h1>Leitor de QR Code com Inversão de Câmera</h1>
+  <h1>Leitor de QR Code com Detecção de Proximidade</h1>
   <div id="qr-result"></div>
   <div id="video-container">
     <video id="qr-video" width="300" height="300" autoplay></video>
-    <button onclick="toggleCamera()">Inverter Câmera</button>
   </div>
 
   <script>
     const video = document.getElementById('qr-video');
     const qrResult = document.getElementById('qr-result');
-    let currentFacingMode = 'environment'; // 'environment' para câmera traseira
+    let lastCode = null; // Último código QR detectado
+    let scanning = false; // Estado de escaneamento
 
     // Função para inicializar o leitor de QR code
     function initQrCodeReader() {
-      const constraints = {
-        video: {
-          facingMode: { exact: currentFacingMode } // Inicialmente câmera traseira
-        }
-      };
-
-      navigator.mediaDevices.getUserMedia(constraints)
+      navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } })
         .then(function(stream) {
           video.srcObject = stream;
           video.play();
-          requestAnimationFrame(tick);
+          scan();
         })
         .catch(function(err) {
           console.error('Erro ao acessar a câmera: ', err);
         });
     }
 
-    // Função para trocar entre câmera frontal e traseira
-    function toggleCamera() {
-      if (currentFacingMode === 'user') {
-        currentFacingMode = 'environment'; // Trocar para câmera traseira
+    // Função para escanear os frames do vídeo em busca de QR codes
+    function scan() {
+      if (!scanning) return;
+      const canvasElement = document.createElement('canvas');
+      canvasElement.width = video.videoWidth;
+      canvasElement.height = video.videoHeight;
+      const canvas = canvasElement.getContext('2d');
+      canvas.drawImage(video, 0, 0, canvasElement.width, canvasElement.height);
+      const imageData = canvas.getImageData(0, 0, canvasElement.width, canvasElement.height);
+      const code = jsQR(imageData.data, imageData.width, imageData.height, {
+        inversionAttempts: 'dontInvert',
+      });
+      if (code) {
+        qrResult.textContent = 'QR Code encontrado: ' + code.data;
+        lastCode = code.data;
       } else {
-        currentFacingMode = 'user'; // Trocar para câmera frontal
+        qrResult.textContent = 'Nenhum QR Code detectado.';
+        lastCode = null;
       }
-
-      // Reinicializar o leitor de QR code com a nova câmera selecionada
-      const constraints = {
-        video: {
-          facingMode: { exact: currentFacingMode }
-        }
-      };
-
-      navigator.mediaDevices.getUserMedia(constraints)
-        .then(function(stream) {
-          video.srcObject = stream;
-          video.play();
-          requestAnimationFrame(tick);
-        })
-        .catch(function(err) {
-          console.error('Erro ao trocar de câmera: ', err);
-        });
+      requestAnimationFrame(scan);
     }
 
-    // Função para processar os frames do vídeo
-    function tick() {
-      if (video.readyState === video.HAVE_ENOUGH_DATA) {
-        const canvasElement = document.createElement('canvas');
-        canvasElement.width = video.videoWidth;
-        canvasElement.height = video.videoHeight;
-        const canvas = canvasElement.getContext('2d');
-        canvas.drawImage(video, 0, 0, canvasElement.width, canvasElement.height);
-        const imageData = canvas.getImageData(0, 0, canvasElement.width, canvasElement.height);
-        const code = jsQR(imageData.data, imageData.width, imageData.height, {
-          inversionAttempts: 'dontInvert',
-        });
-        if (code) {
-          qrResult.textContent = 'QR Code encontrado: ' + code.data;
-        }
-        requestAnimationFrame(tick);
-      }
-    }
+    // Iniciar escaneamento quando a janela carregar
+    window.addEventListener('load', function() {
+      initQrCodeReader();
+      // Iniciar a detecção de proximidade
+      startProximityDetection();
+    });
 
-    // Inicializar o leitor quando a janela carregar
-    window.addEventListener('load', initQrCodeReader);
+    // Função para detectar proximidade
+    function startProximityDetection() {
+      const proximityThreshold = 100; // Threshold de proximidade em pixels
+
+      setInterval(function() {
+        if (lastCode) {
+          const bounds = video.getBoundingClientRect();
+          const centerX = bounds.left + bounds.width / 2;
+          const centerY = bounds.top + bounds.height / 2;
+          const codeX = bounds.left + (lastCode.location.topRightCorner.x + lastCode.location.bottomLeftCorner.x) / 2;
+          const codeY = bounds.top + (lastCode.location.topRightCorner.y + lastCode.location.bottomLeftCorner.y) / 2;
+          const distance = Math.sqrt(Math.pow(centerX - codeX, 2) + Math.pow(centerY - codeY, 2));
+          
+          if (distance <= proximityThreshold) {
+            // QR code está próximo
+            qrResult.textContent = 'QR Code está próximo: ' + lastCode;
+          } else {
+            // QR code não está mais próximo
+            qrResult.textContent = 'QR Code detectado, mas não está próximo.';
+          }
+        } else {
+          qrResult.textContent = 'Nenhum QR Code detectado.';
+        }
+      }, 500); // Verificar a proximidade a cada 500ms
+    }
   </script>
 </body>
 </html>
+
