--- a/index.html
+++ b/index.html
@@ -3,104 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leitor de QR Code com Captura Manual</title>
-  <style>
-    #video-container {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-    }
-    #qr-result {
-      margin-top: 20px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      max-width: 500px;
-      word-wrap: break-word;
-    }
-    #captured-list {
-      margin-top: 20px;
-    }
-    .captured-item {
-      margin-bottom: 5px;
-      padding: 5px;
-      border: 1px solid #ccc;
-    }
-  </style>
+  <title>Scanner de QR Code</title>
+  <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 </head>
 <body>
-  <h1>Leitor de QR Code com Captura Manual</h1>
-  <div id="qr-result"></div>
-  <div id="video-container">
-    <video id="qr-video" width="300" height="300" autoplay></video>
-    <button onclick="captureQRCode()">Capturar QR Code</button>
-  </div>
-  <div id="captured-list">
-    <h2>QR Codes Capturados:</h2>
-    <ul id="captured-items">
-    </ul>
-  </div>
+  <h1>Leitor de QR Code</h1>
+  <video id="preview"></video>
+  <div id="output"></div>
 
   <script>
-    const video = document.getElementById('qr-video');
-    const qrResult = document.getElementById('qr-result');
-    const capturedItems = document.getElementById('captured-items');
-
-    let scanning = false; // Estado de escaneamento
-    let lastCapturedCode = null; // Último código QR capturado
-
-    // Função para inicializar o leitor de QR code
-    function initQrCodeReader() {
-      navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } })
-        .then(function(stream) {
-          video.srcObject = stream;
-          video.play();
-          scanning = true;
-          scan();
-        })
-        .catch(function(err) {
-          console.error('Erro ao acessar a câmera: ', err);
-        });
-    }
-
-    // Função para escanear os frames do vídeo em busca de QR codes
-    function scan() {
-      if (!scanning) return;
-      const canvasElement = document.createElement('canvas');
-      canvasElement.width = video.videoWidth;
-      canvasElement.height = video.videoHeight;
-      const canvas = canvasElement.getContext('2d');
-      canvas.drawImage(video, 0, 0, canvasElement.width, canvasElement.height);
-      const imageData = canvas.getImageData(0, 0, canvasElement.width, canvasElement.height);
-      const code = jsQR(imageData.data, imageData.width, imageData.height, {
-        inversionAttempts: 'dontInvert',
-      });
-      if (code) {
-        qrResult.textContent = 'QR Code encontrado: ' + code.data;
-        lastCapturedCode = code.data;
+    let scanner = new Instascan.Scanner({ video: document.getElementById('preview'), mirror: false });
+    scanner.addListener('scan', function (content) {
+      document.getElementById('output').textContent = content;
+      // Aqui você pode fazer algo com o conteúdo lido, como redirecionar para um URL, etc.
+    });
+    Instascan.Camera.getCameras().then(function (cameras) {
+      if (cameras.length > 0) {
+        scanner.start(cameras[0]);
       } else {
-        qrResult.textContent = 'Nenhum QR Code detectado.';
-        lastCapturedCode = null;
+        console.error('No cameras found.');
       }
-      requestAnimationFrame(scan);
-    }
-
-    // Função para capturar manualmente o QR code detectado
-    function captureQRCode() {
-      if (lastCapturedCode) {
-        const li = document.createElement('li');
-        li.textContent = lastCapturedCode;
-        capturedItems.appendChild(li);
-        qrResult.textContent = 'QR Code capturado: ' + lastCapturedCode;
-      } else {
-        qrResult.textContent = 'Nenhum QR Code para capturar.';
-      }
-    }
-
-    // Iniciar o leitor quando a janela carregar
-    window.addEventListener('load', function() {
-      initQrCodeReader();
+    }).catch(function (e) {
+      console.error(e);
     });
   </script>
 </body>
 </html>
+
 
