--- a/index.html
+++ b/index.html
@@ -4,40 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scanner de QR Code</title>
+  <style>
+    #preview {
+      transform: scaleX(-1); /* Inverte horizontalmente o vídeo */
+    }
+  </style>
   <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 </head>
 <body>
   <h1>Leitor de QR Code</h1>
-  <video id="preview"></video>
+  <video id="preview" playsinline autoplay></video>
   <div id="output"></div>
 
   <script>
-    // Inicializa o scanner com opções personalizadas
+    // Inicializa o scanner
     let scanner = new Instascan.Scanner({ 
       video: document.getElementById('preview'),
-      mirror: true // Espelha o vídeo (opcional)
-    });
-
-    // Função para selecionar a câmera traseira
-    function useBackCamera() {
-      Instascan.Camera.getCameras().then(function (cameras) {
-        let backCamera = cameras.find(camera => camera.name.toLowerCase().includes('back'));
-        if (backCamera) {
-          scanner.stop(); // Para o scanner
-          scanner.start(backCamera); // Inicia o scanner com a câmera traseira
-        } else {
-          console.error('Câmera traseira não encontrada.');
-        }
-      }).catch(function (e) {
-        console.error(e);
-      });
-    }
-
-    // Adiciona um ouvinte de evento para selecionar a câmera traseira (opcional)
-    document.addEventListener('keydown', function (event) {
-      if (event.key === 'b' || event.key === 'B') {
-        useBackCamera();
-      }
+      mirror: false // Define como falso para não espelhar
     });
 
     // Adiciona um ouvinte de evento para processar o QR code lido
@@ -46,13 +29,12 @@
       // Aqui você pode fazer algo com o conteúdo lido do QR code
     });
 
-    // Inicializa o scanner com a câmera traseira
+    // Inicializa o scanner com a primeira câmera encontrada
     Instascan.Camera.getCameras().then(function (cameras) {
-      let backCamera = cameras.find(camera => camera.name.toLowerCase().includes('back'));
-      if (backCamera) {
-        scanner.start(backCamera);
+      if (cameras.length > 0) {
+        scanner.start(cameras[0]);
       } else {
-        console.error('Câmera traseira não encontrada.');
+        console.error('Nenhuma câmera encontrada.');
       }
     }).catch(function (e) {
       console.error(e);
@@ -60,4 +42,5 @@
   </script>
 </body>
 </html>
+
 
