--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     // Inicializa o scanner com opções personalizadas
     let scanner = new Instascan.Scanner({ 
       video: document.getElementById('preview'),
+      mirror: true // Espelha o vídeo (opcional)
     });
 
     // Função para selecionar a câmera traseira
