--- a/index.html
+++ b/index.html
@@ -1,69 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scanner de QR Code</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    /* Estilos simples para a lista de QR codes */
+    #output-list {
+      list-style-type: none;
+      padding: 0;
+    }
+    #output-list li {
+      margin-bottom: 5px;
+      padding: 10px;
+      background-color: #f0f0f0;
+      border: 1px solid #ccc;
+    }
+  </style>
   <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 </head>
 <body>
   <h1>Leitor de QR Code</h1>
-  <video id="preview"></video>
-  <div id="output"></div>
+  <video id="preview" playsinline autoplay></video>
+  <ul id="output-list"></ul> <!-- Lista para exibir os QR codes lidos -->
 
   <script>
-    // Inicializa o scanner com opções personalizadas
     let scanner = new Instascan.Scanner({ 
       video: document.getElementById('preview'),
-      mirror: false // Espelha o vídeo (opcional)
+      mirror: false // Não espelha o vídeo (opcional)
     });
 
-    // Função para selecionar a câmera traseira
-    function useBackCamera() {
-      Instascan.Camera.getCameras().then(function (cameras) {
-        let backCamera = cameras.find(camera => camera.name.toLowerCase().includes('back'));
-        if (backCamera) {
-          scanner.stop(); // Para o scanner
-          scanner.start(backCamera); // Inicia o scanner com a câmera traseira
-        } else {
-          console.error('Câmera traseira não encontrada.');
-        }
-      }).catch(function (e) {
-        console.error(e);
-      });
+    let qrCodes = []; // Array para armazenar os QR codes lidos
+
+    // Carrega os QR codes gravados anteriormente do localStorage (se existirem)
+    if (localStorage.getItem('qrCodes')) {
+      qrCodes = JSON.parse(localStorage.getItem('qrCodes'));
+      updateQrCodeList(); // Atualiza a lista na página
     }
-
-    // Adiciona um ouvinte de evento para selecionar a câmera traseira (opcional)
-    document.addEventListener('keydown', function (event) {
-      if (event.key === 'b' || event.key === 'B') {
-        useBackCamera();
-      }
-    });
-
-    // Adiciona um ouvinte de evento para processar o QR code lido
-    scanner.addListener('scan', function (content) {
-      document.getElementById('output').textContent = content;
-      // Aqui você pode fazer algo com o conteúdo lido do QR code
-    });
-
-    // Inicializa o scanner com a câmera traseira
-    Instascan.Camera.getCameras().then(function (cameras) {
-      let backCamera = cameras.find(camera => camera.name.toLowerCase().includes('back'));
-      if (backCamera) {
-        scanner.start(backCamera);
-      } else {
-        console.error('Câmera traseira não encontrada.');
-      }
-    }).catch(function (e) {
-      console.error(e);
-    });
-
-	let qrCodes = []; // Array para armazenar os QR codes lidos
 
     // Adiciona um ouvinte de evento para processar o QR code lido
     scanner.addListener('scan', function (content) {
       qrCodes.push(content); // Adiciona o QR code lido ao array
+
+      // Salva os QR codes no localStorage
+      localStorage.setItem('qrCodes', JSON.stringify(qrCodes));
 
       // Atualiza a lista na página
       updateQrCodeList();
@@ -82,7 +62,18 @@
       });
     }
 
+    // Inicializa o scanner com a primeira câmera encontrada
+    Instascan.Camera.getCameras().then(function (cameras) {
+      if (cameras.length > 0) {
+        scanner.start(cameras[0]);
+      } else {
+        console.error('Nenhuma câmera encontrada.');
+      }
+    }).catch(function (e) {
+      console.error(e);
+    });
   </script>
 </body>
 </html>
+
 
