--- a/index.html
+++ b/index.html
@@ -40,13 +40,16 @@
 
     // Adiciona um ouvinte de evento para processar o QR code lido
     scanner.addListener('scan', function (content) {
-      qrCodes.push(content); // Adiciona o QR code lido ao array
+      // Verifica se o QR code já foi lido antes de adicioná-lo
+      if (!qrCodes.includes(content)) {
+        qrCodes.push(content); // Adiciona o QR code lido ao array
 
-      // Salva os QR codes no localStorage
-      localStorage.setItem('qrCodes', JSON.stringify(qrCodes));
+        // Salva os QR codes no localStorage
+        localStorage.setItem('qrCodes', JSON.stringify(qrCodes));
 
-      // Atualiza a lista na página
-      updateQrCodeList();
+        // Atualiza a lista na página
+        updateQrCodeList();
+      }
     });
 
     // Função para atualizar a lista de QR codes na página
@@ -76,6 +79,7 @@
   </script>
 </body>
 </html>
+
 
 
 
