--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scanner de QR Code</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     /* Estilos simples para a lista de QR codes */
     #output-list {
