--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       border: 1px solid #ccc;
     }
   </style>
-  <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
+    <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 </head>
 <body>
   <h1>Leitor de QR Code</h1>
@@ -26,6 +27,9 @@
   <ul id="output-list"></ul> <!-- Lista para exibir os QR codes lidos -->
 
   <script>
+
+    const socket = io('https://esx-2024.vercel.app/');
+
     let scanner = new Instascan.Scanner({ 
       video: document.getElementById('preview'),
       mirror: false // Não espelha o vídeo (opcional)
