--- a/index.html
+++ b/index.html
@@ -3,26 +3,62 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leitor de QR Code</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
-  <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+  <title>Scanner de QR Code</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    /* Estilos simples para a lista de QR codes */
+    #output-list {
+      list-style-type: none;
+      padding: 0;
+    }
+    #output-list li {
+      margin-bottom: 5px;
+      padding: 10px;
+      background-color: #f0f0f0;
+      border: 1px solid #ccc;
+    }
+  </style>
+    <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 </head>
 <body>
   <h1>Leitor de QR Code</h1>
-  <video id="preview" playsinline></video>
+  <video id="preview" playsinline autoplay></video>
+  <ul id="output-list"></ul> <!-- Lista para exibir os QR codes lidos -->
 
   <script>
-    // Configuração do WebSocket (substitua pelo seu IP local ou domínio)
+
     const socket = io('https://esx-2024.vercel.app/');
 
-    // Inicializa o scanner Instascan
-    let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
-    scanner.addListener('scan', function (content) {
-      // Envia o conteúdo do QR code via WebSocket para o PC
-      socket.emit('qrCodeScanned', content);
+    let scanner = new Instascan.Scanner({ 
+      video: document.getElementById('preview'),
+      mirror: false // Não espelha o vídeo (opcional)
     });
 
-    // Inicia o scanner com a câmera traseira
+    let qrCodes = []; // Array para armazenar os QR codes lidos
+
+    // Adiciona um ouvinte de evento para processar o QR code lido
+    scanner.addListener('scan', function (content) {
+      // Verifica se o QR code já foi lido antes de adicioná-lo
+      if (!qrCodes.includes(content)) {
+        qrCodes.push(content); // Adiciona o QR code lido ao array
+        updateQrCodeList(); // Atualiza a lista na página
+      }
+    });
+
+    // Função para atualizar a lista de QR codes na página
+    function updateQrCodeList() {
+      let outputList = document.getElementById('output-list');
+      outputList.innerHTML = ''; // Limpa a lista atual
+
+      // Itera sobre o array de QR codes e cria itens de lista para cada um
+      qrCodes.forEach(function (qrCode) {
+        let listItem = document.createElement('li');
+        listItem.textContent = qrCode;
+        outputList.appendChild(listItem);
+      });
+    }
+
+    // Inicializa o scanner com a câmera traseira
     Instascan.Camera.getCameras().then(function (cameras) {
       let backCamera = cameras.find(camera => camera.name.toLowerCase().includes('back'));
       if (backCamera) {
@@ -36,7 +72,6 @@
   </script>
 </body>
 </html>
-
 
 
 
